# Monthly-Metrics

./: .env.example  .gitignore  CLAUDE.md  HEARTBEAT.md  PUBLISH.md  README.md  findings.md  main.py  preview.html  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.serena/: project.yml
architecture/: SOP.md
config/: agents.example.csv  settings.py  thresholds.json
deploy/: Caddyfile.example  README.md  bootstrap.sh  cloudflared.example.yml  install-pi.sh  monthly-metrics-send.service  monthly-metrics-send.timer  monthly-metrics-sync.service  monthly-metrics-sync.timer  monthly-metrics-web.service  nginx.example.conf
docs/: MORNING-2026-05-08.md
scripts/: add_hostname.sh  backup_db.sh  deploy.sh  deploy_from_mac.sh  diagnose.sh  disk_check.sh  harden_pi.sh  healthz_check.sh  heartbeat.sh  install.sh  install_cron.sh  install_dashboard_service.sh  install_monthly_timer.sh  install_tunnel.sh  serve.sh  smoke.sh
src/: agent_portal.py  auth.py  csv_ingest.py  daily_sync.py  dashboard.py  dashboard_daily.py  deck_builder.py  email_builder.py  fub_client.py  fub_daily_metrics.py  fub_diagnose.py  gauges.py  mailer.py  metrics.py  notifier.py  portal_storage.py  review_mode.py  roster.py  storage.py  threshold_researcher.py
systemd/: anchor-backup.service  anchor-backup.timer  anchor-dashboard.service  anchor-monthly.service  anchor-monthly.timer
templates/: deck.html.j2  email.html.j2
tests/: conftest.py  test_agent_portal.py  test_auth.py  test_csv_ingest.py  test_daily_sync.py  test_dashboard.py  test_dashboard_daily.py  test_deck_builder.py  (+24 more)
(+36 files in other folders)
